Make sure wp-caption doesn't take too much width

--- a/style.css
+++ b/style.css
@@ -947,6 +947,10 @@ blockquote:before {
 	}
 }
 
+.wp-caption {
+	max-width: 100%;
+}
+
 .wp-caption a {
 	border: 0;
 }
